src/github.com/ebay/akutan/query/parser/testdata/legacy/errors/unquoted_text_2.bql
?s ?p <Samsung>
?s ?p SamsungGroup
